Fixed bug in load_module - sys not imported

--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
+    "import json\n",
     "from pathlib import Path\n",
     "\n",
     "from fastcore.script import Param, bool_arg, call_parse\n",
