--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,26 @@
     "\n",
     "\n",
     "def something():\n",
-    "    pass"
+    "    print(\"The first step\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Usage: Unsupervised Modelling"
+    "# Example Usage: Mock Unsupervised Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auto-reloading modules is very useful when using `nbdev` as changes to underlying modules are picked up without having to restart the kernel."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +58,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sciflow.utils import lib_path, odbc_connect, query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option(\"display.max_colwidth\", 800)"
+    "from sciflow.utils import lib_path"
    ]
   },
   {
@@ -69,12 +67,12 @@
    "source": [
     "# Params\n",
     "\n",
-    "> These parameters are managed by papermill execution"
+    "> `sciflow` uses the papermill format for paramaeterising notebooks. See here for how to specify papermill params: https://papermill.readthedocs.io/en/latest/usage-parameterize.html. These parameters will be available to use in your flows."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "parameters"
@@ -85,27 +83,34 @@
     "# export\n",
     "\n",
     "traffic_percent = 1\n",
-    "speed = \"fast-learn\"\n",
     "workers = 8\n",
-    "odbc_conn = odbc_connect()\n",
-    "model_level = \"TopLevelDispatcher\"\n",
+    "model_level = \"dispatcher\"\n",
     "min_date = \"2021-01-01\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "def get_traffic_text(percent):\n",
     "    return str(percent) if int(percent) >= 10 else \"0\" + str(percent)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`nbdev` tests are any cells which are not exporting code and do not have flags that say they should be ignored from testing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,18 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "def get_experiment_segment(traffic_percent):\n",
     "    return tuple(get_traffic_text(tp) for tp in range(traffic_percent))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,90 +155,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def get_utterances(odbc_conn, model, min_date, traffic_percent):\n",
-    "    segment = get_experiment_segment(traffic_percent)\n",
-    "    return query(\n",
-    "        odbc_conn,\n",
-    "        f\"\"\"\n",
-    "    select Utterance from \"chatbot_unpublish_s3\".\"lambda-output\".\"finn_feedback\"\n",
-    "    where model = '{model}' and to_date(substr(\"Timestamp\", 0, 10), 'YYYY-MM-dd') >= to_date('{min_date}', 'YYYY-MM-dd')\n",
-    "    and substr(AccountNumber, 15, 16) IN ('{\"','\".join(segment)}')\n",
-    "    \"\"\",\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def get_button_responses_filter(odbc_conn):\n",
-    "    button_responses_query = f\"\"\"\n",
-    "    SELECT \"text\"\n",
-    "    FROM \"chatbot_unpublish_s3\".\"lambda-output\".\"live_person\".messages a\n",
-    "    inner join \"chatbot_unpublish_s3\".\"lambda-output\".digital.events b\n",
-    "    on a.\"conversationId\" = b.\"LivePersonConversationId\"\n",
-    "    where b.QuickReplyButton = true and a.eventBy = 'Consumer'\n",
+    "def get_utterances(\n",
+    "    odbc_conn=None, model_level=None, min_date=None, traffic_percent=100\n",
+    "):\n",
     "    \"\"\"\n",
-    "    button_responses = query(odbc_conn, button_responses_query)\n",
-    "    additional_button_responses = [\n",
-    "        \"Transaction enquiry\",\n",
-    "        \"Transaction Enquiry\",\n",
-    "        \"Hi\",\n",
-    "        \"Hello\",\n",
-    "        \"Card declined\",\n",
-    "        \"Close account\",\n",
-    "    ]\n",
-    "    return button_responses.text.tolist() + additional_button_responses"
+    "    You will probably call data preparation code here. To simplify dependencies we are just creating synthetic data instead.\n",
+    "    \"\"\"\n",
+    "    get_experiment_segment(traffic_percent)\n",
+    "    dummy_data = pd.Series(\n",
+    "        np.random.choice(\n",
+    "            [\n",
+    "                \"Hello\",\n",
+    "                \"Goodbye\",\n",
+    "                \"Hi\",\n",
+    "                \"Can you help?\",\n",
+    "                \"I have an issue, can you help me?\",\n",
+    "            ],\n",
+    "            100,\n",
+    "        ),\n",
+    "        name=\"utterance\",\n",
+    "    )\n",
+    "    return dummy_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:preprocess\n",
     "\n",
     "\n",
-    "def preprocess(odbc_conn, model_level, min_date, traffic_percent):\n",
+    "def preprocess(odbc_conn=None, model_level=None, min_date=None, traffic_percent=100):\n",
     "    data = get_utterances(odbc_conn, model_level, min_date, traffic_percent)\n",
-    "    button_filter = get_button_responses_filter(odbc_conn)\n",
-    "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
-    "    documents = user_texts.Utterance.tolist()\n",
+    "    documents = data.tolist()\n",
     "    results = {\"documents\": documents}\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = preprocess(odbc_conn, model_level, min_date, traffic_percent)[\"documents\"]"
+    "documents = preprocess(traffic_percent)[\"documents\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert len(documents) > 0\n",
     "assert (\n",
-    "    pd.Series([\"Transaction Enquiry\", \"Payment Issues\", \"Credit Limit Enquiry\"])\n",
+    "    pd.Series([\"Some other text\", \"Which should not be in the utterances\"])\n",
     "    .isin(pd.Series(documents))\n",
     "    .sum()\n",
     "    == 0\n",
@@ -240,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +235,7 @@
     "\n",
     "\n",
     "class Topics:\n",
-    "    def __init__(self, documents, workers, speed):\n",
+    "    def __init__(self, documents, workers):\n",
     "        pass\n",
     "\n",
     "    def get_num_topics(self):\n",
@@ -264,18 +251,8 @@
     "            [1, 2, 3, 4, 5, 6],\n",
     "        )\n",
     "\n",
-    "    def search_documents_by_topic(self, topic_num, num_docs):\n",
-    "        return (\n",
-    "            [\"cat\", \"sat\", \"mat\", \"mouse\", \"house\", \"grouse\"],\n",
-    "            np.asarray([1, 1, 1, 1, 1, 1]),\n",
-    "            [1, 2, 3, 4, 5, 6],\n",
-    "        )\n",
-    "\n",
-    "    def generate_topic_wordcloud(self, topic_num):\n",
-    "        print(\"wordcloud\")\n",
-    "\n",
-    "    def hierarchical_topic_reduction(self, num_topics):\n",
-    "        return [\"cat\", \"sat\", \"mat\"]"
+    "    def plot_wordcloud(self):\n",
+    "        print(\"you may want to remove plotting code from testing to speed things up\")"
    ]
   },
   {
@@ -287,38 +264,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:fit\n",
     "\n",
     "\n",
-    "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
-    "    model = Topics(documents, workers=workers, speed=speed)\n",
+    "def fit(documents, workers=workers):\n",
+    "    model = Topics(documents, workers=workers)\n",
     "    results = {\"model\": model}\n",
     "    return results"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Tests which are long running can be ignored from test execution. You can use the tst flags in settings.ini or create your own in the same file. See https://nbdev.fast.ai/test for more info. In this example we use `#slow` to indicate this should be skipped."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# slow\n",
     "import time\n",
     "\n",
-    "time.sleep(10)"
+    "time.sleep(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fit(documents, workers=workers, speed=speed)[\"model\"]"
+    "model = fit(documents, workers=workers)[\"model\"]"
    ]
   },
   {
@@ -337,9 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.get_num_topics()"
    ]
@@ -353,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,74 +374,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Get Representative Documents for Topics"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "def get_num_docs(topic_idx, topic_sizes, max_k=50):\n",
-    "    n_docs = topic_sizes[topic_idx]\n",
-    "    return n_docs if n_docs < max_k else max_k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Distance in word space & in intent space\n",
-    "# Topics matches to sub-intent?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = np.random.choice(model.get_num_topics(), 1)[0]\n",
-    "docs, doc_scores, doc_ids = model.search_documents_by_topic(\n",
-    "    topic_num=i, num_docs=get_num_docs(i, topic_sizes, max_k=20)\n",
-    ")\n",
-    "\n",
-    "assert all([type(doc) == str for doc in docs])\n",
-    "assert all([type(doc.encode(\"utf-8\")) == bytes for doc in docs])\n",
-    "\n",
-    "docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you may want to remove plotting code from testing to speed things up\n"
+     ]
+    }
+   ],
    "source": [
     "# vis\n",
     "# time.sleep(120)\n",
-    "model.generate_topic_wordcloud(0)"
+    "model.plot_wordcloud()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lib_path(\"nbs\", \"test\", \"dataframe_artifact.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,8 +402,6 @@
     "\n",
     "\n",
     "def evaluate(model):\n",
-    "    pass\n",
-    "\n",
     "    topic_words, word_scores, topic_nums = model.get_topics(model.get_num_topics())\n",
     "\n",
     "    topic_contains_non_empty_words = all([len(tw) > 0 for tw in topic_words])\n",
@@ -468,7 +414,10 @@
     "        and word_scores_in_range\n",
     "        and as_many_items_as_topics\n",
     "    )\n",
+    "    # You can add artifacts in a step that will be saved to block storage. Add the paths to the file on the local filesystem\n",
+    "    # and the artifact will be uploaded to remote storage.\n",
     "    artifacts = [lib_path(\"nbs\", \"test\", \"dataframe_artifact.csv\")]\n",
+    "    # You can add step metrics too this time just add a list of 3-tuples where tuple order = (name, value, step)\n",
     "    metrics = [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
     "    results = {\n",
     "        \"word_summaries\": word_summaries,\n",
@@ -480,17 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = evaluate(model)\n",
-    "if results:\n",
-    "    assert \"artifacts\" in results\n",
-    "assert not \"artifacts\" in evaluate(model)[\"artifacts\"]\n",
-    "results = None\n",
-    "if results:\n",
-    "    assert \"artifacts\" in results"
+    "assert results[\"word_summaries\"]\n",
+    "assert results[\"metrics\"] == [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
+    "assert results[\"artifacts\"] == [lib_path(\"nbs\", \"test\", \"dataframe_artifact.csv\")]"
    ]
   },
   {
@@ -502,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,38 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert serve_num_topics(model) > 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "def serve_reduced_hierarchies(model, desired_num_topics):\n",
-    "    return model.hierarchical_topic_reduction(desired_num_topics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    serve_reduced_hierarchies(model, -1)\n",
-    "except IndexError:\n",
-    "    print(\"Negative indexing not possible\")\n",
-    "try:\n",
-    "    serve_reduced_hierarchies(model, model.get_num_topics() + 1)  # > #topics\n",
-    "except ValueError as ve:\n",
-    "    print(ve)"
    ]
   }
  ],
