--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fa60c9b5190>"
+       "<sacred.run.Run at 0x7fb85cb9af50>"
       ]
      },
      "execution_count": 11,
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
