Added abalone example. Parameterised track_experiment

--- a/examples/02_hello_sciflow.ipynb
+++ b/examples/02_hello_sciflow.ipynb
@@ -146,17 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Converted 01_hello_nbdev.ipynb.\n",
+      "Converted 02_hello_sciflow.ipynb.\n",
       "Converted complete_workflow.ipynb.\n",
       "Converted experiment_tracking.ipynb.\n",
-      "Converted hello_sciflow.ipynb.\n",
       "Converted running_metaflows.ipynb.\n",
+      "Converted tidying_notebooks.ipynb.\n",
       "Converted why_make.ipynb.\n"
      ]
     }
@@ -175,19 +177,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "testing /home/jovyan/git/sciflow/examples/01_hello_nbdev.ipynb\n",
       "testing /home/jovyan/git/sciflow/examples/complete_workflow.ipynb\n",
-      "testing /home/jovyan/git/sciflow/examples/experiment_tracking.ipynb\n",
-      "testing /home/jovyan/git/sciflow/examples/hello_sciflow.ipynb\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "testing /home/jovyan/git/sciflow/examples/02_hello_sciflow.ipynb\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "[IPKernelApp] ERROR | KeyboardInterrupt caught in kernel.\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
       "testing /home/jovyan/git/sciflow/examples/running_metaflows.ipynb\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "testing /home/jovyan/git/sciflow/examples/experiment_tracking.ipynb\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "testing /home/jovyan/git/sciflow/examples/tidying_notebooks.ipynb\n",
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
       "testing /home/jovyan/git/sciflow/examples/why_make.ipynb\n",
-      "All tests are passing!\n"
+      "/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py:97: RuntimeWarning: coroutine 'ZMQSocketChannel.get_msg' was never awaited\n",
+      "  return False,time.time()-start\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/envs/sciflow/bin/nbdev_test_nbs\", line 10, in <module>\n",
+      "    sys.exit(nbdev_test_nbs())\n",
+      "  File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/fastcore/script.py\", line 107, in _f\n",
+      "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
+      "  File \"/opt/conda/envs/sciflow/lib/python3.7/site-packages/nbdev/test.py\", line 120, in nbdev_test_nbs\n",
+      "    raise Exception(msg + '\\n'.join([f.name for p,f in zip(passed,files) if not p]))\n",
+      "Exception: The following notebooks failed:\n",
+      "01_hello_nbdev.ipynb\n",
+      "02_hello_sciflow.ipynb\n",
+      "complete_workflow.ipynb\n",
+      "experiment_tracking.ipynb\n",
+      "running_metaflows.ipynb\n",
+      "tidying_notebooks.ipynb\n",
+      "why_make.ipynb\n"
      ]
     }
    ],
@@ -205,90 +245,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#!/usr/bin/env python\n",
-      "# coding=utf-8\n",
-      "# SCIFLOW GENERATED FILE - EDIT COMPANION NOTEBOOK\n",
-      "from metaflow import FlowSpec, step, current, Parameter\n",
-      "from sciflow_examples.hello_sciflow import first, second\n",
-      "from sciflow_examples.hello_sciflow import traffic_percent\n",
-      "from sacred import Experiment\n",
-      "from sciflow.experiment.lake_observer import AWSLakeObserver\n",
-      "import time\n",
+      "# AUTOGENERATED! DO NOT EDIT! File to edit: 02_hello_sciflow.ipynb (unless otherwise specified).\n",
       "\n",
-      "ex = Experiment(\"hello_sciflow\")\n",
-      "# TODO inject observers\n",
-      "obs = AWSLakeObserver(project=\"sciflow_examples\", experiment_name=\"hello_sciflow\")\n",
-      "ex.observers.append(obs)\n",
+      "__all__ = ['first', 'traffic_percent', 'second']\n",
       "\n",
-      "@ex.config\n",
-      "def config():\n",
-      "    flow_run_id = None\n",
-      "    artifacts = []\n",
-      "    metrics = []\n",
-      "    \n",
-      "\n",
-      "class HelloSciflowFlow(FlowSpec):\n",
-      "    traffic_percent = Parameter('traffic_percent', default=traffic_percent)\n",
-      "    artifacts = []\n",
-      "    metrics = []\n",
-      "\n",
-      "    @step\n",
-      "    def start(self):\n",
-      "        first()\n",
-      "        self.start_time = time.time()\n",
-      "        self.next(self.second)\n",
-      "\n",
-      "    @step\n",
-      "    def second(self):\n",
-      "        results = second(self.traffic_percent)\n",
-      "\n",
-      "        for key in results.keys():\n",
-      "            if key in self.__dict__:\n",
-      "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
-      "            else:\n",
-      "                self.__dict__[key] = results[key]\n",
-      "\n",
-      "        self.next(self.end)\n",
+      "# step:first\n",
       "\n",
       "\n",
-      "    @step\n",
-      "    def end(self):\n",
-      "        flow_info = {\n",
-      "            \"flow_name\": current.flow_name,\n",
-      "            \"run_id\": current.run_id,\n",
-      "            \"pathspec\": current.pathspec,\n",
-      "            \"namespace\": current.namespace,\n",
-      "            \"username\": current.username,\n",
-      "            \"flow_parameters\": str(current.parameter_names),\n",
-      "            \"run_time_mins\": round((time.time() - self.__getattr__('start_time')) / 60.0, 1)\n",
-      "        }\n",
+      "def first():\n",
+      "    print(\"The first step\")\n",
       "\n",
-      "        run = ex.run(config_updates={'artifacts': self.__getattr__('artifacts'),\n",
-      "                                    'metrics': self.__getattr__('metrics')},\n",
-      "                     meta_info = flow_info)\n",
+      "# Cell\n",
       "\n",
-      "    @ex.main\n",
-      "    def track_flow(artifacts, metrics, _run):\n",
-      "        for artifact in artifacts:\n",
-      "            _run.add_artifact(artifact)\n",
-      "        for metric_name, metric_value, step in metrics:\n",
-      "            _run.log_scalar(metric_name, metric_value, step)\n",
-      "    \n",
-      "if __name__ == \"__main__\":\n",
-      "    HelloSciflowFlow()"
+      "\n",
+      "# Cell\n",
+      "\n",
+      "traffic_percent = 1\n",
+      "\n",
+      "# step:second\n",
+      "\n",
+      "\n",
+      "def second(traffic_percent):\n",
+      "    results = {}\n",
+      "    # Currently step functions need to return a dictionary. The keys: artifacts and metrics are reserved for experiment tracking otherwiose any other named keys will be available in future steps.\n",
+      "    results[\"traffic_multiplied\"] = traffic_percent * 2\n",
+      "    return results"
      ]
     }
    ],
    "source": [
     "# tst\n",
-    "!cat hello_sciflow.py"
+    "!cat sciflow_examples/hello_sciflow.py"
    ]
   },
   {
@@ -300,34 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[35m\u001b[1mMetaflow 2.3.4\u001b[0m\u001b[35m\u001b[22m executing \u001b[0m\u001b[31m\u001b[1mHelloSciflowFlow\u001b[0m\u001b[35m\u001b[22m\u001b[0m\u001b[35m\u001b[22m for \u001b[0m\u001b[31m\u001b[1muser:Donal\u001b[0m\u001b[35m\u001b[22m\u001b[K\u001b[0m\u001b[35m\u001b[22m\u001b[0m\n",
-      "\u001b[35m\u001b[22mValidating your flow...\u001b[K\u001b[0m\u001b[35m\u001b[22m\u001b[0m\n",
-      "\u001b[32m\u001b[1m    The graph looks good!\u001b[K\u001b[0m\u001b[32m\u001b[1m\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:18.293 \u001b[0m\u001b[1mWorkflow starting (run-id 1631111418290567):\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:18.296 \u001b[0m\u001b[32m[1631111418290567/start/1 (pid 15689)] \u001b[0m\u001b[1mTask is starting.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:19.319 \u001b[0m\u001b[32m[1631111418290567/start/1 (pid 15689)] \u001b[0m\u001b[22mThe first step\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:19.444 \u001b[0m\u001b[32m[1631111418290567/start/1 (pid 15689)] \u001b[0m\u001b[1mTask finished successfully.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:19.449 \u001b[0m\u001b[32m[1631111418290567/second/2 (pid 15722)] \u001b[0m\u001b[1mTask is starting.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:20.612 \u001b[0m\u001b[32m[1631111418290567/second/2 (pid 15722)] \u001b[0m\u001b[1mTask finished successfully.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:20.617 \u001b[0m\u001b[32m[1631111418290567/end/3 (pid 15755)] \u001b[0m\u001b[1mTask is starting.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:21.646 \u001b[0m\u001b[32m[1631111418290567/end/3 (pid 15755)] \u001b[0m\u001b[22mINFO - hello_sciflow - Running command 'track_flow'\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:22.078 \u001b[0m\u001b[32m[1631111418290567/end/3 (pid 15755)] \u001b[0m\u001b[22mINFO - hello_sciflow - Started\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:22.079 \u001b[0m\u001b[32m[1631111418290567/end/3 (pid 15755)] \u001b[0m\u001b[22mINFO - hello_sciflow - Completed after 0:00:00\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:22.288 \u001b[0m\u001b[32m[1631111418290567/end/3 (pid 15755)] \u001b[0m\u001b[1mTask finished successfully.\u001b[0m\n",
-      "\u001b[35m2021-09-08 14:30:22.288 \u001b[0m\u001b[1mDone!\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##tst\n",
-    "!source ~/.sciflow/env && python hello_sciflow.py --no-pylint run"
+    "!source ~/.sciflow/env && python sciflow_examples/hello_sciflow.py --no-pylint run"
    ]
   },
   {
