--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -111,6 +111,10 @@
    "source": [
     "assert load_module(\"sciflow.test.test_data_handling\").int_param == 3\n",
     "assert load_module(\"sciflow.test.test_data_handling\").float_param == 1.1\n",
+    "assert load_module(\"sciflow.test.test_clustering\").traffic_percent == 1\n",
+    "assert load_module(\"sciflow.test.test_clustering_no_params\").traffic_percent == 1\n",
+    "assert load_module(\"sciflow.test.test_export\").some_param == \"test\"\n",
+    "assert load_module(\"sciflow.test.test_module\").some_param == 2\n",
     "assert type(load_module(\"sciflow.test.test_data_handling\").series_param) == pd.Series\n",
     "assert load_module(\"sciflow.utils\").odbc_connect is not None"
    ]
