--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -312,9 +312,9 @@
      "data": {
       "text/plain": [
        "Project: sciflow\n",
-       "Experiment: generated_experiment_name_97484\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_97484\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_97484"
+       "Experiment: generated_experiment_name_91335\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_91335\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_91335"
       ]
      },
      "execution_count": 12,
@@ -383,7 +383,7 @@
      "text": [
       "INFO - lake_experiment_loader - Running command 'my_main'\n",
       "INFO - lake_experiment_loader - Started\n",
-      "INFO - lake_experiment_loader - Completed after 0:00:00\n"
+      "INFO - lake_experiment_loader - Completed after 0:00:01\n"
      ]
     },
     {
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f1ba4d9db90>"
+       "<sacred.run.Run at 0x7fc2ec31c0d0>"
       ]
      },
      "execution_count": 14,
