--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -264,8 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24 ms, sys: 0 ns, total: 24 ms\n",
-      "Wall time: 362 ms\n"
+      "CPU times: user 21.8 ms, sys: 1.06 ms, total: 22.8 ms\n",
+      "Wall time: 556 ms\n"
      ]
     }
    ],
@@ -284,8 +284,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 4 ms, total: 4 ms\n",
-      "Wall time: 152 ms\n"
+      "CPU times: user 3.2 ms, sys: 0 ns, total: 3.2 ms\n",
+      "Wall time: 288 ms\n"
      ]
     }
    ],
