--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,9 @@
     "@call_parse\n",
     "def sciflow_init(project_root: Param(\"The root directory of the project\", Path) = None):\n",
     "    pass\n",
-    "    # Add project_root to PYTHONPATH"
+    "    # Add project_root to PYTHONPATH\n",
+    "    # Copy template files to project root\n",
+    "    # Create sciflow env file if it doesn't exist"
    ]
   }
  ],
